Bug 694804 - Make attempting to serialize an unserializable object in WyciwycChannelParent a real error. r=michal.novotny